test/data/resolver/valid/parameter_expr_predicate.cypher
MATCH (p:Person) WHERE p.age > 0 AND $flag RETURN p.name
