test/data/resolver/invalid/parameter_type_conflict_two_properties.cypher
MATCH (p:Person) WHERE p.name = $x AND p.age = $x RETURN p.name
